# Multi-Party-Computation

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  package-lock.json  run_tests.sh  test_mpc_logic.py  wrangler.toml
src/: env_wrapper.rs  lib.rs
src/api/: routes.rs
src/crypto/: dkg.rs  mod.rs  mpc.rs  shamir.rs  threshold_signatures.rs  zkp.rs
src/error/: error.rs  mod.rs
src/meta/: metadata.rs  mod.rs
src/monitoring/: mod.rs
src/processing/: mod.rs  shamir.rs  solana.rs
src/storage/: aws.rs  azure.rs  cloudflare.rs  digital_ocean.rs  memory.rs  mod.rs
tests/: crypto_tests.rs  integration_tests.rs
