[package]
name = "multi-party-computation"
version = "0.1.0"
edition = "2021"
authors = ["Md.Sadiq <mohammadsadiq4950@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Web framework
worker = { version = "0.5.0", features = ['http'] }
axum = { version = "0.6", features = ["tokio", "json"] }
tower = { version = "0.4", features = ["util"] }
http = "0.2"
tower-http = { version = "0.5", features = ["trace", "cors"] }
worker-macros = { version = "0.5.0", features = ['http'] }
tower-service = "0.3.2"
hyper = "0.14"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
borsh = "0.10"
bincode = "1.3"
base64 = "0.21"
hex = "0.4"
bs58 = "0.5"

# Cryptography
curve25519-dalek = { version = "4.1", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
scrypt = "0.11"
zeroize = { version = "1.7", features = ["derive"] }

# MPC and Secret Sharing
threshold-secret-sharing = "0.2.2"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
ff = "0.13"
group = "0.13"

# Blockchain
solana-sdk = "1.16.0"
ethers = "2.0"
web3 = "0.19"

# Storage
aws-sdk-s3 = "0.28"
aws-sdk-kms = "0.28"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "json", "uuid"] }

# Error handling & Logging
thiserror = "1.0.40"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.5", features = ["std_rng"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1.1" }
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.5"